# kannel

./: AUTHORS  COPYING  ChangeLog  INSTALL  LICENSE  Makefile.in  NEWS  README  Rakefile  STATUS  VERSION  acinclude.m4  aclocal.m4  bootstrap.sh  configure  configure.in  gw-config.h.in  mkinstalldirs
addons/opensmppbox/: AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  UPGRADE  VERSION  acinclude.m4  aclocal.m4  bootstrap  configure  configure.in  sb-config.h.in
addons/opensmppbox/doc/: userguide.xml
addons/opensmppbox/example/: opensmppbox.conf.example  smpplogins.txt.example
addons/opensmppbox/gw/: Makefile.am  Makefile.in  opensmppbox-cfg.def  opensmppbox.c
addons/opensmppbox/rpm/: opensmppbox.spec.in
addons/sqlbox/: AUTHORS  COPYING  ChangeLog  INSTALL  KannelLICENSE  Makefile.am  Makefile.in  NEWS  README  UPGRADE  acinclude.m4  aclocal.m4  configure  configure.in  sb-config.h.in
addons/sqlbox/doc/: userguide.xml
addons/sqlbox/example/: sqlbox.conf.example
addons/sqlbox/gw/: Makefile.am  Makefile.in  sqlbox-cfg.def  sqlbox.c  sqlbox_mssql.c  sqlbox_mssql.h  sqlbox_mysql.c  sqlbox_mysql.h  sqlbox_oracle.c  sqlbox_oracle.h  sqlbox_pgsql.c  sqlbox_pgsql.h  sqlbox_sdb.c  sqlbox_sdb.h  sqlbox_sql.c  sqlbox_sql.h  sqlbox_sqlite.c  sqlbox_sqlite.h  sqlbox_sqlite3.c  sqlbox_sqlite3.h
addons/sqlbox/rpm/: sqlbox.spec.in
benchmarks/: bench_http.sh  bench_http.txt  bench_sms.conf  bench_sms.sh  bench_sms.txt  functions.inc  report-begin.txt  run-benchmarks
checks/: check_compiler.sh  check_counter.c  check_date.c  check_fakesmsc.sh  check_fakewap.sh  check_headers.sh  check_http.sh  check_httpsmsc_kannel.sh  check_ipcheck.c  check_list.c  check_octstr.c  check_ppg.sh  check_sendsms.sh  check_smpp.sh  test_dates
contrib/: fortune.cgi  html2wml.pl  ping.cgi  sendsms  smstomail.cgi
debian/: changelog  changelog.devel  changelog.stable  control  control.devel  control.stable  copyright  kannel-cvs-extras.install  kannel-cvs.docs  kannel-cvs.init  kannel-cvs.postinst  kannel-devel-docs.docs  kannel-devel-extras.install  kannel-devel.docs  kannel-devel.init  kannel-devel.install  kannel-devel.links  kannel-extras.install  kannel.conf  kannel.default  kannel.dirs  kannel.init  kannel.logrotate  kannel.postrm  rules
doc/: ChangeLog-0.13.1  ChangeLog-1.1  ChangeLog-1.1.1  ChangeLog-1.1.2  ChangeLog-1.1.3  ChangeLog-1.1.4  ChangeLog-1.1.5  ChangeLog-1.1.6  ChangeLog-1.2.0  ChangeLog-1.2.1  ChangeLog-1.3.0  ChangeLog-1.3.1  ChangeLog-1.3.2  ChangeLog-1.4.0  ChangeLog-1.4.1  ChangeLog-1.4.2  ChangeLog-1.4.4  ChangeLog-1.5.0  CodingStyle  dialup.txt  fakewap-packets.txt  release.txt
gw/: alt_charsets.h  bb.h  bb_alog.c  bb_boxc.c  bb_http.c  bb_smscconn.c  bb_smscconn_cb.h  bb_store.c  bb_store.h  bb_store_file.c  bb_store_redis.c  bb_store_spool.c  bb_udp.c  bearerbox.c  bearerbox.h  control.html  dlr.c  dlr.h  dlr_cass.c  dlr_mem.c  dlr_mssql.c  dlr_mysql.c  dlr_oracle.c  dlr_p.h  dlr_pgsql.c  dlr_redis.c  dlr_sdb.c  dlr_spool.c  dlr_sqlite3.c  heartbeat.c  heartbeat.h  html.c  html.h  kannel.8  load.c  load.h  meta_data.c  meta_data.h  mime_decompiler.c  mime_decompiler.h  (+56 more)
gwlib/: accesslog.c  accesslog.h  cfg.c  cfg.def  cfg.h  charset.c  charset.h  conn.c  conn.h  counter.c  counter.h  date.c  date.h  dbpool.c  dbpool.h  dbpool_cass.c  dbpool_mssql.c  dbpool_mysql.c  dbpool_oracle.c  dbpool_p.h  dbpool_pgsql.c  dbpool_redis.c  dbpool_sdb.c  dbpool_sqlite.c  dbpool_sqlite3.c  dict.c  dict.h  fdset.c  fdset.h  gw-getopt.h  gw-prioqueue.c  gw-prioqueue.h  gw-rwlock.c  gw-rwlock.h  gw-timer.c  gw-timer.h  gw_uuid.c  gw_uuid.h  gwassert.h  gwlib.c  (+47 more)
radius/: radius_acct.c  radius_acct.h  radius_attributes.def  radius_pdu.c  radius_pdu.def  radius_pdu.h
soap/: Makefile.in
solaris/: copyright  mk-solaris-package.sh  pkginfo.tmpl  prototype.tmpl
test/: blacklist.txt  bookmark.txt  chartest.html  decompile.c  decompile.h  dlr-receiver.py  drive_smpp.c  drive_smpp.conf  drive_wapbox.c  fakesmsc.c  fakewap.c  header_test  hello.wml  html-test-1  http2-test-urls  iptestppg.txt  mime-multipart.txt  run-http2-tests.sh  settings4.txt  si.txt  sl.txt  smstestppg.txt  test_boxc.c  test_cfg.c  test_charset.c  test_cimd2.c  test_conn.c  test_date.c  test_dbpool.c  test_dict.c  test_file_traversal.c  test_hash.c  test_headers.c  test_hmac.c  test_http.c  test_http_server.c  test_list.c  test_md5.c  test_mem.c  test_mime.c  (+29 more)
utils/: OTAbitmap.c  OTAbitmap.h  accesslog_parser.pl  attgetopt.c  build-cygwin-package  changelog-report  chlog-stats  daily-patch  decode_emimsg.c  find-long-lines  foobar-config.sh  kannel-init.d  kannel-log-summary  kannel-nag  kannel-redhat.init.d  kannel-stable-rh6x.spec  kannel-stable-rh7.spec  makedist  mtbatch.1  mtbatch.c  pixmapgen.pl  run-checks  run_kannel_box.8  run_kannel_box.c  seewbmp.1  seewbmp.c  source-stats  start-stop-daemon.c  update-license-text.sh  update-license.sh  utf8map.pl  vimrc  wbmp.c  wbmp.h  win1257unicode.txt
wap/: cookies.c  cookies.h  timers.c  timers.h  wap.c  wap.h  wap_addr.c  wap_addr.h  wap_events.c  wap_events.def  wap_events.h  wsp.c  wsp.h  wsp_caps.c  wsp_caps.h  wsp_headers.c  wsp_headers.h  wsp_pdu.c  wsp_pdu.def  wsp_pdu.h  wsp_push_client.c  wsp_push_client.h  wsp_push_client_machine.def  wsp_push_client_states.def  wsp_server_method_machine.def  wsp_server_method_states.def  wsp_server_push_machine.def  wsp_server_push_states.def  wsp_server_session_machine.def  wsp_server_session_states.def  wsp_session.c  wsp_strings.c  wsp_strings.def  wsp_strings.h  wsp_unit.c  wtls-secmgr.c  wtls.c  wtls.h  wtls_machine-decl.h  wtls_pdu.c  (+23 more)
wmlscript/: lexer.txt  make-op-table.in  wmlsc.1  wmlsc.c  wmlsdasm.1  wmlsdasm.c  ws.c  ws.h  wsalloc.c  wsalloc.h  wsasm.c  wsasm.h  wsbc.c  wsbc.h  wsbuffer.c  wsbuffer.h  wsencode.c  wsencode.h  wserror.c  wserror.h  wsfalloc.c  wsfalloc.h  wsgram.c  wsgram.h  wsgram.y  wshash.c  wshash.h  wsieee754.c  wsieee754.h  wsint.h  wslexer.c  wsopcodes.h  wsopt.c  wsopt.h  wsstdlib.c  wsstdlib.h  wsstream.c  wsstream.h  wsstream_data.c  wsstream_file.c  (+4 more)
(+97 files in other folders)
